metabase/k8-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: metabase
  labels:
    app: metabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
    spec:
      containers:
        - name: metabase
          image: metabase/metabase
          ports:
            - containerPort: 3000
              name: metabase
        - name: cloudsql
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy",
                    "-instances=verdant-abacus-130216:us-east1:funnel=tcp:9091,verdant-abacus-130216:us-east1:test-reporting-apps=tcp:9081",
                    "-credential_file=/secrets/cloudsql/cloudsql-gcp-key.json"]
          volumeMounts:
            - name: cloudsql-service-account
              mountPath: /secrets/cloudsql
              readOnly: true
      volumes:
        - name: cloudsql-service-account
          secret:
            secretName: cloudsql-gcp-key
